css/main.css
/* Fonts: */
@font-face {
	font-family: carmela;
	src: url(../assets/carmela.ttf);
}

/* General elements */
body {
	background-color: #edf7f2;
	font-family: carmela;
	direction: rtl;
}

/* Vote note and counters text */
/*******************/
/* Center Elements */
/*******************/

#note {
	width: 208px;
	height: 296px;
	background-color: white;
	box-shadow: 0px 0px 10px;
	position: absolute;
	top: 130px;
	left: 50%;
	margin-right: -50%;
	/*-webkit-transform: translate(-50%, -50%); */
	transform: translate(-50%, 0);
}

#note > input,
#note > textarea {
	font-family: carmela;
	width: 200px;
	direction: rtl;
	position: absolute;
	text-align: center;
	border-style: none;
}

#note > *:focus {
	outline: 0;
}

#noteTitle {
	font-size: 80px;
	top: 30%;
	left: 4px;
}

#noteSubtitle {
	font-size: 25px;
	bottom: 10px;
	resize: none;
	left: 2px;
}

#note:hover {
	box-shadow: 0px 0px 10px;
}

#note:active {
	box-shadow: 0px 0px 0px;
}

.noteHint {
	position: absolute;
	top: 90px;
	left: 50%;
	transform: translate(-50%);
}

#votesNumText {
	font-size: 48px;
	/*display: none; -  Used for jQuery fade in. We'll remove for now... */
	position: absolute;
	top: 500px;
	left: 50%;
	transform: translate(-50%,0);
	color: #00adc1;
}

#kolotBakalpi {
	font-size: 30px;
	position: absolute;
	top: 550px;
	left: 50%;
	transform: translate(-50%,0);
	color: #00adc1;
}

#votesPerSecText {
	font-size: 14px;
	position: absolute;
	top: 585px;
	left: 50%;
	transform: translate(-50%,0);
	color: #00adc1;
}

/*********************/
/* Generator buttons */
/*********************/

#generators {
	position: absolute;
	top: 150px;
	left: 0%;
  /*  Prevents scrolling outside of page size */
  overflow: hidden;
}

.genBtn {
	background: linear-gradient(#b5e655, #96ca2d);
	width: 350px;
	height: 65px;
	left: -100%;
	cursor: pointer;
	position: relative;
	color: grey;
}

/* Button color when is purchasable */
.genBtnAvailable {
	color: white;
}

.genBtn > * {
	position: absolute;
}

.genBtnPrice {
	font-size: 24px;
	top: 5px;
	right: 70px;
}

.genBtnDesc {
	font-size: 14px;
	top: 35px;
	right: 70px;
	line-height: 90%;
	left: 50px;
}

.genBtnLvl {
	font-size: 72px;
	top: -5px;
	left: 27px;
	opacity: 0.5;
}

.genBtnSummary {
	background-color: black;
	opacity: 0.75;
	color: white;
	width: 285px;
	height: 65px;
	left: 0%;
	text-align: center;
	display: none;
}

.genBtnSummary > p {
	position: relative;
	top: 10px;
}

.genBtn:hover > .genBtnSummary {
	display: inline;
}

/*************/
/* Upgraders */
/*************/

#upgrades {
	background-color: #BABABA;
	position: absolute;
	right: 0%;
	top: 140px;
	height: 700px;
	border-radius: 25px 0px 0px 20px;
	border: 2px solid #8F8F8F;
	width: 350px;
	border-right-style: none;
	padding-top: 18px;
}

.upgrade {
	height: 60px;
}

.upgrade > div {
	position: absolute;
}

.upgradeBtnBuy {
	cursor: pointer;
	background-color: white;
	width: 50px;
	height: 50px;
	line-height: 50px; /* Used to center the button text */
	right: 7px;
	border: 2px solid #8F8F8F;
	border-radius: 10px;
	font-size: 20px;
	text-align: center;
}

.upgradeBtnBuy:hover {
	background-color: black;
	color: white;
}

.upgradeBtnBuy:active {
	background-color: white;
	color: black;
}

.upgradeBox {
	background-color: white;
	width: 275px;
	height: 50px;
	right: 65px;
	border: 2px solid #8F8F8F;
	border-radius: 10px;
}

.upgradeBox > div {
	position: absolute;
}

.upgradeBoxTitle {
	font-size: 16px;
	right: 7px;
	top: 4px;
	font-weight: bold;
}

.upgradeBoxDesc {
	font-size: 13px;
	right: 7px;
	top: 25px;
	line-height: 90%;
}

